--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DATABASE_URL=postgresql://postgres.jvrtxgxfmaaprhjwqwmy:122344@aws-0-eu-central-1.pooler.supabase.com:6543/postgres
+DATABASE_URL=postgresql://postgres.hxgsoikilfgdporibthd:122344@aws-0-eu-central-1.pooler.supabase.com:6543/postgres
 JWT_SECRET=your_strong_secret_key_here
