--- a/.env
+++ b/.env
@@ -1,3 +1,20 @@
 DATABASE_URL=postgresql://postgres.hxgsoikilfgdporibthd:122344@aws-0-eu-central-1.pooler.supabase.com:6543/postgres
 JWT_SECRET=your_strong_secret_key_here
 PORT=1000
+
+# SendGrid Configuration
+SENDGRID_API_KEY=your_sendgrid_key
+SENDGRID_FROM_EMAIL=noreply@yourdomain.com
+SENDGRID_VERIFICATION_TEMPLATE_ID=your_template_id
+
+# Rate Limiting
+THROTTLE_TTL=3600  # 1 hour in seconds
+THROTTLE_LIMIT=5    # Max attempts per hour
+
+# Email configuration
+MAIL_HOST=smtp.example.com
+MAIL_PORT=587
+MAIL_USER=user@example.com
+MAIL_PASSWORD=password
+MAIL_FROM=noreply@example.com
+FRONTEND_URL=http://localhost:3000
