--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "class-validator": "^0.14.2",
     "crypto": "^1.0.1",
     "mysql2": "^3.14.1",
+    "nest-winston": "^1.10.2",
     "nodemailer": "^7.0.3",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
