--- a/.env
+++ b/.env
@@ -12,9 +12,9 @@ THROTTLE_TTL=3600  # 1 hour in seconds
 THROTTLE_LIMIT=5    # Max attempts per hour
 
 # Email configuration
-MAIL_HOST=smtp.example.com
+MAIL_HOST=sandbox.smtp.mailtrap.io
 MAIL_PORT=587
-MAIL_USER=user@example.com
-MAIL_PASSWORD=password
-MAIL_FROM=noreply@example.com
+MAIL_USER=2f7afffe038e69
+MAIL_PASSWORD=00b8353f460f58
+MAIL_FROM="SGS Inventory App <alikamatu14@gmail.com>"
 FRONTEND_URL=http://localhost:3000
